--- a/virtualhosts/kokekunster.no.conf
+++ b/virtualhosts/kokekunster.no.conf
@@ -28,8 +28,7 @@
 	<Directory /var/www/kokekunster.no/public_html/>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride None
-		Order allow,deny
-		allow from all
+		Require all granted
 		DirectoryIndex  index.php 1semester.php index.html  /_h5ai/server/php/index.php
 
 		# Direct Apache to send all HTML output to the mod_pagespeed output handler.
@@ -46,8 +45,7 @@
 	<Directory "/usr/lib/cgi-bin">
 		AllowOverride None
 		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-		Order allow,deny
-		Allow from all
+		Require all granted
 	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
