Last commit before migrating to Django

--- a/virtualhosts/kokekunster.no.conf
+++ b/virtualhosts/kokekunster.no.conf
@@ -12,10 +12,10 @@
 		DirectoryIndex index.php 1semester.php  index.html  /_h5ai/server/php/index.php
 
 		#All URLS rewritten as kokekunster.no --> www.kokekunster.no
-		RewriteEngine On
-		RewriteCond %{HTTP_HOST} !^www\.
-		RewriteCond %{HTTPS}s ^on(s)|
-		RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+		#RewriteEngine On
+		#RewriteCond %{HTTP_HOST} !^www\.
+		#RewriteCond %{HTTPS}s ^on(s)|
+		#RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 		
 		#Fix wrong capitalization
 		CheckSpelling On
